<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:layout_marginBottom="61dp"
        android:text="@string/mainTitle"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/buttonUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonUser" />

    <Button
        android:id="@+id/buttonGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonGast" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin" />

</LinearLayout>