<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="76dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginInputUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintUserName"
            android:textAlignment="textStart"
            android:visibility="visible" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginUserInputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintUserPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonUserlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonLogin" />

    <Button
        android:id="@+id/buttonUserBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back" />

</LinearLayout>