<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff497f"
    android:orientation="vertical">

    <Button
        android:id="@+id/buttonCreatUserBack"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:background="@android:drawable/ic_menu_revert" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCreateUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/TextViewBenutzerErstellen"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintUserName"
                android:textAlignment="textStart"
                android:visibility="visible" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintUserPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonUserInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonUserInput" />
    </LinearLayout>

</LinearLayout>