<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right">

        <Button
            android:id="@+id/buttonInfoClose"
            android:layout_width="30sp"
            android:layout_height="30sp"
            android:background="@android:drawable/ic_menu_close_clear_cancel" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="431dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAllgemeineInfoUE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40sp"
            android:layout_marginBottom="20sp"
            android:text="@string/allgemeineInfoUE"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AllgemeineInfoText"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Absatz2"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>